# MARIS_QA_Helper

./: .env.dev.example  .env.example  .gitignore  README.md  docker-compose.dev-local.yml  docker-compose.oauth.yml  docker-compose.prod.yml  docker-compose.yml  install.sh  qdrant.yaml  setup.sh
backend/: Dockerfile  pyproject.toml
backend/app/: agent.py  auth.py  batch_upload.py  chats.py  chunking.py  config.py  content_hash.py  content_refine.py  customers.py  db.py  document_assets.py  document_fingerprints.py  document_merge.py  document_retranscribe.py  duplicates.py  embeddings.py  ingestion.py  integration_auth.py  integration_routes.py  knowledge_center.py  llm.py  llm_catalog.py  llm_presets.py  main.py  models.py  oauth_device_flow.py  oauth_token_store.py  oauth_xai_flow.py  prompts.py  qdrant_store.py  retrieval.py  roles_admin.py  routes.py  secrets_admin.py  system_prompts.py  tenant.py  upload.py  users_admin.py
backend/app/loaders/: __init__.py  docx_content.py  docx_loader.py  image_inspect.py  pdf_loader.py  text_loaders.py  vision_ocr.py
backend/app/static/: app.css  app.js  snow.js
backend/app/templates/: admin.html  admin_keys.html  admin_keys_assignments.html  admin_keys_presets.html  admin_knowledge.html  admin_prompts.html  admin_roles.html  admin_users.html  base.html  chat.html  customers.html  index.html  kb.html  layout.html  login.html
backend/app/tests/: conftest.py  test_admin.py  test_admin_customers.py  test_admin_keys.py  test_admin_roles.py  test_admin_users.py  test_agent.py  test_auth.py  (+27 more)
backend/scripts/: snow_perf_test.py
(+199 files in other folders)
