[project]
name = "sup-qa-helper"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "qdrant-client>=1.12",
    "openai>=1.55",
    "argon2-cffi>=23.1",
    "pypdf>=5.0",
    "pillow>=10.0",
    "python-docx>=1.1",
    "pytest>=8.0",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "itsdangerous>=2.2",
    "oauth-codex>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
